..F....... [ZBX-22418] fixed popup form fields overlapping labels when textarea width is resized
(cherry picked from commit d70c92cba182b6225f27913d4084e7c67f5a99f5)

--- a/ui/assets/styles/blue-theme.css
+++ b/ui/assets/styles/blue-theme.css
@@ -4211,6 +4211,7 @@ textarea {
   margin: 0;
   padding: 4px 5px;
   overflow: auto;
+  resize: vertical;
   font-family: Arial, Tahoma, Verdana, sans-serif;
   font-size: 1em;
   line-height: normal;
